# msl

./: .env.example  .gitignore  .gitmodules  Makefile  NOTICE  README.md  THIRD-PARTY-LICENSES  docs
.github/workflows/: ci.yml  release.yml
docs/specs/gpu/: 00-scope-and-goals.md  01-current-architecture.md  02-research-findings.md  03-decision.md  04-target-architecture.md  05-milestone-g0-spike.md  06-milestone-g1-backend-abstraction.md  07-milestone-g2-kernel.md  08-milestone-g3-vmm.md  09-milestone-g4-guest-gpu-userland.md  10-milestone-g5-way-protocol.md  11-milestone-g6-host-presentation.md  12-milestone-g7-daemon-integration.md  13-milestone-g8-packaging-ci.md  14-validation-and-performance.md  15-risks-and-contingencies.md  16-future-work.md  README.md
entitlements/: dev.entitlements  fskit-appex.entitlements  release-app.entitlements  release.entitlements
guest/: Cargo.toml  about.toml  deny.toml
guest/agent/: Cargo.toml
guest/agent/src/: agent.rs  binfmt.rs  conn.rs  distro.rs  exec.rs  frame.rs  gui.rs  log.rs  main.rs  mem.rs  proto.rs  server.rs  sys.rs  wait.rs
guest/auth/: Cargo.toml
guest/auth/src/: bootstrap.rs  lib.rs  linux.rs  proto.rs  secrets.rs  secrets_main.rs  session_main.rs  ssh.rs  ssh_agent_main.rs
guest/fsd/: Cargo.toml
guest/fsd/src/: backend.rs  backend_linux.rs  main.rs  names.rs  nodes.rs  serve.rs  stat.rs
guest/shim/: Cargo.toml
guest/shim/src/: main.rs  proto.rs  session.rs  tty.rs
guest/src/: agent.rs  distro.rs  exec.rs  frame.rs  main.rs  net.rs  proto.rs  server.rs  session.rs  sys.rs
guest/way/: Cargo.toml
guest/way/src/: comp.rs  frames.rs  input.rs  ledger.rs  lib.rs  main.rs  popups.rs  remote.rs  xwm.rs
guest/way/tests/: protocol_v5.rs
guest/wire/: Cargo.toml
guest/wire/src/: frame.rs  fs.rs  lib.rs  poll.rs
host/: .gitignore  .swift-format  .swiftlint.yml  Package.resolved  Package.swift  fskit-appex.yml
host/Resources/msl-fskit/: Info.plist
host/Resources/msl-menubar/: Info.plist  msl.icns
host/Sources/CMSLSys/: shim.c
host/Sources/MSLCore/: AuthBridgeListener.swift  AuthBridgeProtocol.swift  AuthPolicyStore.swift  AuthSessionTable.swift  AuthSessionWrapper.swift  BootSpec.swift  BundleWatchdog.swift  ByteRelay.swift  Catalog.swift  CatalogDownload.swift  CatalogDownloadDelegate.swift  CatalogEmbedded.swift  CatalogIconStyle.swift  ControlClient.swift  DaemonClient.swift  DaemonConfig.swift  DaemonCore+Auth.swift  DaemonCore+FSMount.swift  DaemonCore+GUI.swift  DaemonCore+Lifecycle.swift  DaemonCore+Rosetta.swift  DaemonCore.swift  DaemonLock.swift  DaemonRuntime.swift  DaemonServer.swift  DaemonTeardownBundle.swift  DataPlane.swift  DesktopProbe.swift  DeviceMap.swift  DistroBundle.swift  DistroInventory.swift  Driver.swift  ExportDriver.swift  FSKitEnablement.swift  FSMountAdmission.swift  FSMountListener.swift  FSMountOps.swift  FSMountProto.swift  FSMountTable.swift  FSMountpoint.swift  (+71 more)
host/Sources/MSLFSWire/: FSProto.swift  FSProtoCodec.swift  FSProtoFrames.swift  FSProtoTypes.swift  (+1 more)
packaging/: component.plist  distribution.xml
packaging/resources/: conclusion.html  readme.html  welcome.html
packaging/scripts/: postinstall  postinstall-lib.sh  preinstall
packaging/tests/: postinstall_test.sh
skills/: README.md
skills/msl/: SKILL.md
tools/: fskit-e2e.sh  mk-builder-initramfs.sh  mk-initramfs.sh  mk-libxkbcommon.sh  mk-rootfs.sh  third-party-licenses.hbs
(+153 files in other folders)
