[package]
name = "msl-agent"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "msl-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
