[workspace]
members = ["agent", "wire", "shim"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
vsock = "0.5"
msl-wire = { path = "wire" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
