[package]
name = "msl-shim"
version = "0.2.1"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mac"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
msl-wire = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = { workspace = true }

[lints]
workspace = true
